samples/_failures_safe/1761348495_92dc0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8a19f20.c: In function ‘main’:
./samples/SAFE/__tmp_e8a19f20.c:163:12: error: missing terminating " character
  163 |     printf("Total processed strings: %zu\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e8a19f20.c:163:5: error: expected expression at end of input
  163 |     printf("Total processed strings: %zu\n
      |     ^~~~~~
./samples/SAFE/__tmp_e8a19f20.c:163:5: error: expected declaration or statement at end of input
